salesforce/force-app/main/default/objects/Marketer_Portfolio__c/Marketer_Portfolio__c.object-meta.xml
<CustomObject>
    <description>Marketer portfolio configuration for distributed 1:1 marketing. Each portfolio represents a segment of customers assigned to specific marketers.</description>
    <label>Marketer Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketer Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>