salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Auto_Approval_Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Confidence_Threshold__c</fullName>
    <defaultValue>85</defaultValue>
    <description>Minimum confidence score (0-100) required for auto-approval</description>
    <label>Auto-Approval Confidence Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>