salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Auto_Approval_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable auto-approval for high-confidence opportunities in this portfolio</description>
    <label>Auto-Approval Enabled</label>
    <type>Checkbox</type>
</CustomField>