salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Current_Workload__c.field-meta.xml
<CustomField>
    <fullName>Current_Workload__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current number of active opportunities in this portfolio (rollup from Journey_Approval__c)</description>
    <label>Current Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>