salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Data_Cloud_Segment__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Segment__c</fullName>
    <description>Data Cloud segment API name used as portfolio targeting criteria</description>
    <label>Data Cloud Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>