salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Data_Cloud_Segment_Label__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Segment_Label__c</fullName>
    <description>Display label for the selected Data Cloud segment</description>
    <label>Data Cloud Segment Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>