salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this portfolio is actively receiving new assignments</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>