salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Loyalty_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tiers__c</fullName>
    <description>Loyalty tiers this portfolio serves (for segment-based portfolios)</description>
    <label>Loyalty Tiers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>