salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <description>Type of portfolio assignment logic</description>
    <label>Portfolio Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Segment</fullName>
            </value>
            <value>
                <fullName>Lifecycle</fullName>
            </value>
            <value>
                <fullName>Event Specialist</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>