salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Primary_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary marketer responsible for this portfolio</description>
    <label>Primary Marketer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Primary Portfolios</relationshipLabel>
    <relationshipName>Primary_Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>