salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Priority ordering for portfolio matching. Lower number = higher priority. Used to resolve conflicts when a contact matches multiple portfolios.</description>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>