salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Secondary_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Backup marketer for this portfolio when primary is unavailable</description>
    <label>Secondary Marketer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Secondary Portfolios</relationshipLabel>
    <relationshipName>Secondary_Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>