salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Specialty_Events__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Events__c</fullName>
    <description>Event types this portfolio specializes in (for event specialist portfolios)</description>
    <label>Specialty Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>New Baby</fullName>
            </value>
            <value>
                <fullName>Career Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>