salesforce/force-app/main/default/objects/Marketer_Portfolio__c/fields/Workload_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Workload_Capacity__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Maximum number of active opportunities this portfolio can handle at once</description>
    <label>Workload Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>